Prevent selector matching from incorrectly failing due to greedy matching.  b=24031  r=pierre@netscape.com